WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199713
StorageArea should not be destructed on the main thread
https://bugs.webkit.org/show_bug.cgi?id=199713
Summary
StorageArea should not be destructed on the main thread
Sihui Liu
Reported
2019-07-11 10:57:51 PDT
StorageArea should be only used in StorageManager thread.
Attachments
Patch
(3.46 KB, patch)
2019-07-11 11:13 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2019-07-11 10:58:34 PDT
<
rdar://problem/52911900
>
Sihui Liu
Comment 2
2019-07-11 11:13:21 PDT
Created
attachment 373931
[details]
Patch
WebKit Commit Bot
Comment 3
2019-07-11 15:26:32 PDT
Comment on
attachment 373931
[details]
Patch Clearing flags on attachment: 373931 Committed
r247370
: <
https://trac.webkit.org/changeset/247370
>
WebKit Commit Bot
Comment 4
2019-07-11 15:26:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug