StorageArea should not be destructed on the main thread https://bugs.webkit.org/show_bug.cgi?id=199713 <rdar://problem/52911900>

Reviewed by Alex Christensen.

After r246079, LocalStorageNameSpace could be destructed on the main thread and it may hold the last reference
to StorageArea. Then we saw the crashes that StorageArea was wrongly destructed on the main thread.

* NetworkProcess/NetworkSession.cpp:
(WebKit::NetworkSession::~NetworkSession):
* NetworkProcess/WebStorage/StorageManager.cpp:
(WebKit::StorageManager::waitUntilTasksFinished):
(WebKit::StorageManager::waitUntilWritesFinished): Deleted.
* NetworkProcess/WebStorage/StorageManager.h:


Canonical link: https://commits.webkit.org/213605@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247370 268f45cc-cd09-0410-ab3c-d52691b4dbfc